Backend — Add health endpoints + externalize config